--- a/destination-serengeti.html
+++ b/destination-serengeti.html
@@ -131,7 +131,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/kilimora5.jpg" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
         </nav>
     </div>
     <div class="container-fluid bg-primary py-5 mb-5 hero-header"
-        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/nyumbu-migrate.jpeg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
+        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/chui.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
@@ -367,7 +367,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/twiga.jpg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/chui-eat2.jpeg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -526,7 +526,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid w-100" src="img/t4.jpg" alt="Great Migration">
+                    <img class="img-fluid w-100" src="img/Zebra-4.jpg" alt="Great Migration">
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h1 class="mb-4">Witness The Great Migration</h1>
@@ -611,7 +611,7 @@
             <!-- Tarangire Block -->
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
-                    <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
+                    <img src="img/tembo11.jpeg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
 
                 </div>
                 <div class="col-lg-6">
@@ -629,7 +629,7 @@
             <!-- Zanzibar Block -->
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
-                    <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
+                    <img src="img/zanzibar-island.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
 
                 </div>
                 <div class="col-lg-6">
@@ -711,7 +711,7 @@
         </div>
     </div>
 
-        <!-- Footer Start -->
+    <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
