--- a/destination-serengeti.html
+++ b/destination-serengeti.html
@@ -40,7 +40,7 @@
             display: inline-block;
             width: 50px;
             height: 3px;
-            background-color: #d4a017;
+            background-color: #78B438;
             margin-right: 15px;
             vertical-align: middle;
         }
@@ -58,7 +58,7 @@
         }
 
         .icon-box i {
-            color: #d4a017;
+            color: #78B438;
             font-size: 40px;
             margin-bottom: 15px;
         }
@@ -153,7 +153,7 @@
                                             style="font-size: 2.5rem;">
                                             Destinations
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #d4a017;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -209,7 +209,7 @@
                                             style="font-size: 2.5rem;">
                                             Safari Tours
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #d4a017;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -264,7 +264,7 @@
                                             style="font-size: 2.5rem;">
                                             Experiences
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #d4a017;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -447,73 +447,115 @@
             <div class="owl-carousel testimonial-carousel">
                 <!-- Tour Item 1 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/nyumbu-migrate.jpeg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>3 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>2 Person</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/nyumbu-migrate.jpeg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>3 Days</span>
+                                <span class="tour-tag"><i class="fa fa-map-marker-alt text-primary me-2"></i>Wildlife
+                                    Safaris</span>
+                            </div>
                         </div>
-                        <p class="mb-2">Experience the highlights of Serengeti in a short but sweet safari.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">3 Days Classic Serengeti Safari</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Ngorongoro
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Tour Item 2 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/pro3.jpg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>Family</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
+                                <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
+                            </div>
                         </div>
-                        <p class="mb-2">Perfect for families looking to explore the wild together.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">4 Day Serengeti Safari Package</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Manyara
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Tour Item 3 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/simba.jpg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">5 Days Great Migration Safari</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>5 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>Group</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/simba.jpg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>5 Days</span>
+                                <span class="tour-tag"><i class="fa fa-paw text-primary me-2"></i>Great Migration</span>
+                            </div>
                         </div>
-                        <p class="mb-2">Follow the herds and witness the dramatic river crossings.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">5 Days Great Migration Safari</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Mara Area
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Tour Item 4 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/photo1.jpeg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">10 Days Exclusive Serengeti Safari</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>10 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>Luxury</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
+                                    Days</span>
+                                <span class="tour-tag"><i class="fa fa-gem text-primary me-2"></i>Luxury Safari</span>
+                            </div>
                         </div>
-                        <p class="mb-2">An immersive journey through the entire ecosystem in pure luxury.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">10 Days Exclusive Serengeti Safari</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Zanzibar
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -636,9 +678,11 @@
                     <h3 class="dest-country">Zanzibar Island</h3>
                     <div class="dest-underline"></div>
                     <p class="dest-text">
-                        After the dust of the safari, wash it off in the crystal-clear waters of Zanzibar. Relax on
-                        pristine white sand beaches, explore the historic Stone Town, and indulge in the spices and
-                        culture of the Swahili Coast. The perfect bush-to-beach conclusion.
+                        After the thrill of the safari, unwind in the turquoise waters of Zanzibar. Lounge on pristine
+                        white-sand beaches, wander through the historic streets of Stone Town, and immerse yourself in
+                        the vibrant spices, culture, and traditions of the Swahili Coast. Kilimora Adventure offers the
+                        perfect bush-to-beach escape, combining the best of wildlife adventures with ultimate relaxation
+                        by the ocean..
                     </p>
                     <a href="#" class="dest-btn">â†’ EXPLORE ZANZIBAR</a>
                 </div>
@@ -716,7 +760,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #d4a017; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -887,7 +931,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#d4a017; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
