--- a/destination-kilimanjaro.html
+++ b/destination-kilimanjaro.html
@@ -40,7 +40,7 @@
             display: inline-block;
             width: 50px;
             height: 3px;
-            background-color: #d4a017;
+            background-color: #78B438;
             margin-right: 15px;
             vertical-align: middle;
         }
@@ -58,7 +58,7 @@
         }
 
         .icon-box i {
-            color: #d4a017;
+            color: #78B438;
             font-size: 40px;
             margin-bottom: 15px;
         }
@@ -153,7 +153,7 @@
                                             style="font-size: 2.5rem;">
                                             Destinations
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #d4a017;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -209,7 +209,7 @@
                                             style="font-size: 2.5rem;">
                                             Safari Tours
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #d4a017;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -264,7 +264,7 @@
                                             style="font-size: 2.5rem;">
                                             Experiences
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #d4a017;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -699,7 +699,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #d4a017; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -870,7 +870,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#d4a017; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
