--- a/testimonial.html
+++ b/testimonial.html
@@ -162,7 +162,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #d4a017; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -333,7 +333,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#d4a017; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
